DOCKER-435  Update dependency gradle to v7.6.2